# me400-control-app

./: .gitignore  README.md
me400 control/: ControlView.swift  DataPacket.swift  INTEGRAL_THRESHOLD_IMPLEMENTATION.md  ME400ControlApp.swift  MacAndiPadView.swift  MainMenuView.swift  NCameraView.swift  NContentView.swift  NControlCoordinator.swift  NControlViews.swift  NNetworkManager.swift  NProtocol.swift  NServerStateView.swift  NSettingsView.swift  README.md  SettingsView.swift  TCPClientManager.swift
me400 control.xcodeproj/: project.pbxproj
me400 control/Assets.xcassets/AppIcon.appiconset/: Contents.json
me400 control/enhanced/: ALL_FIXES_IMPLEMENTED.md  ARCHIVE_FIXES.md  BUILD_NOTES.md  CLIENT_SERVER_SYNC_FLOW.md  CODE_REVIEW_SUMMARY.md  COMPILATION_FIXES.md  CONNECTION_FIX.md  CONNECTION_REFUSED_FIX.md  DEBUG_SYSTEM_SETTINGS.md  EXPLICIT_SEND_CONTROLS.md  FAST_CONNECTION_FIX.md  FINAL_FIXES_SUMMARY.md  FINAL_UI_IMPROVEMENTS.md  FIXES_IMPLEMENTED.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KEYBOARD_AND_SERVERSTATE_FIXES.md  LATENCY_EXPLANATION.md  MODE_AND_OFFSET_FIXES_V2.md  MODE_SYNC_FIX.md  NCameraView.swift  NContentView.swift  NControlCoordinator.swift  NControlViews.swift  NEW_COMMUNICATION_PROTOCOL.md  NME400App.swift  NNetworkManager.swift  NProtocol.swift  NServerStateView.swift  NSettingsView.swift  NSystemStateManager.swift  README.md  RECENT_UPDATES.md  RECONNECTION_AND_UI_FIXES.md  ROBUST_RECONNECTION_FIX.md  ROS2_PACKET_VERIFICATION.md  ROS2_SERVER_CURRENTSTATE_FORMAT.md  SERVER_AUTHORITATIVE_CHANGES.md  SERVER_LOGGING_AND_UI_FIX.md  SIMPLIFIED_CONTROLS.md  (+9 more)
me400 control/updated/: AutoAimView.swift  AutonomousView.swift  BoundingBoxHandler.swift  CameraOffsetControl.swift  CombinedSceneView.swift  DataPacket.swift  DoubleInputBox.swift  ESCControlView.swift  FinalAppView.swift  IMPROVEMENTS_SUMMARY.md  IntegerInputBox.swift  Item.swift  ME400ControlApp.swift  MainView.swift  ManualControlView.swift  ModeSelector.swift  ParameterManager.swift  PitchYawPIControlView.swift  ServerCommunicationManager.swift  ServerConnectingView.swift  SetLaunchThresholdsView.swift  SettingsManager.swift  SettingsView.swift  StringInputBox.swift
me400 controlTests/: me400_controlTests.swift
me400 controlUITests/: me400_controlUITests.swift  me400_controlUITestsLaunchTests.swift
real_server/src/cannon_package/: CMakeLists.txt  package.xml
real_server/src/cannon_package/cannon_package/: yolo.py
real_server/src/cannon_package/include/cannon_package/: data.hpp  imu_node.hpp  master.hpp  motor_node.hpp  pca9685_driver.hpp  pid.hpp  server.hpp
real_server/src/cannon_package/launch/: cannon_launch.py
real_server/src/cannon_package/resource/: cannon_package
real_server/src/cannon_package/resource/model/ball_test_openvino_model/: metadata.yaml
real_server/src/cannon_package/resource/model/ball_test_openvino_model_half/: ball_test.xml  metadata.yaml
real_server/src/cannon_package/resource/model/ball_test_openvino_model_no_half/: ball_test.xml  metadata.yaml
real_server/src/cannon_package/resource/model/bell_openvino_model/: metadata.yaml
real_server/src/cannon_package/resource/model/final_bell_initial_openvino_model/: metadata.yaml
real_server/src/cannon_package/resource/model/picam_bell_openvino_model/: metadata.yaml  picam_bell.xml
real_server/src/cannon_package/resource/model/yolo11n_openvino_model/: metadata.yaml
real_server/src/cannon_package/scripts/: yolo_node.py
real_server/src/cannon_package/src/: imu_node.cpp  main.cpp  master.cpp  motor_node.cpp
ros2_ws/: run.sh  stop
ros2_ws/src/cannon_package/: CMakeLists.txt  setup.py
ros2_ws/src/cannon_package/cannon_package/: pid_webserver.py  yolo.py
ros2_ws/src/cannon_package/cannon_package/unused/: pid_webserver.py
ros2_ws/src/cannon_package/config/: params.yaml
ros2_ws/src/cannon_package/include/cannon_package/: data.hpp  imu.hpp  imu_node.hpp  master.hpp  motor_node.hpp  pca9685_driver.hpp  pid.hpp  sensor_node.hpp  server.hpp  target_interpolation.hpp
ros2_ws/src/cannon_package/include/cannon_package/unused/: motor.hpp
ros2_ws/src/cannon_package/launch/: cannon_launch.py
ros2_ws/src/cannon_package/resource/model/arducam_bell_openvino_model/: metadata.yaml
ros2_ws/src/cannon_package/resource/model/yolo11n_ncnn_model/: metadata.yaml  model.ncnn.param
ros2_ws/src/cannon_package/resource/static/: styles.css
ros2_ws/src/cannon_package/resource/templates/: index.html
ros2_ws/src/cannon_package/scripts/: motor_node.py  web_node.py  yolo_node.py
ros2_ws/src/cannon_package/scripts/unused/: limit_switch_node.py  motor_node.py  motor_node_original.py  mouse.py  servo_node.py  web_node.py
ros2_ws/src/cannon_package/src/: imu.cpp  imu_node.cpp  main.cpp  master.cpp  motor_node.cpp  sensor_node.cpp
ros2_ws/src/cannon_package/src/unused/: keyinput.cpp
server/: SERVER_FIX_TARGET_OFFSET.md  bounding_box_server.py  master.cpp  simple_tcp_server  simple_tcp_server.cpp  tcp_server.py  test_nan_server  test_nan_server.cpp  test_server.py
