<?xml version="1.0"?>
<package format="2">
  <name>cannon_package</name>
  <version>0.0.1</version>
  <description>A simple ROS2 package that mixes C++ and Python nodes</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <!-- build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- compile‐time dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gpiozero</build_depend>
  <build_depend>lgpio</build_depend>

  <!-- run‐time dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gpiozero</exec_depend>
  <exec_depend>lgpio</exec_depend>

  <!-- for ament_lint -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- keep using ament_cmake -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
